[UPDATE] bug fixing
correcting vertical scrollbar

--- a/static/about/CSS/about.css
+++ b/static/about/CSS/about.css
@@ -41,7 +41,6 @@
 
 body{
     overflow-x: hidden;
-    overflow-y: hidden;
 }
 .team-section{
     background-image: url('/img/space_otimized.gif');
